# nyx

./: .gitignore  Cargo.toml  LICENSE  README.md
ArgosCI/: config.json
design/: design.md
licenses/: chrono-tz-license
nyx-backend/: Cargo.toml  docker_ps_output.data  ps.data
nyx-backend/src/: error.rs  lib.rs  main.rs
nyx-backend/src/gathering/: lasa.rs  mod.rs  shamash.rs
nyx-backend/src/gathering/df/: df.data  mod.rs
nyx-backend/src/gathering/docker/: docker_ps_output.data  mod.rs
nyx-backend/src/gathering/free/: free.data  mod.rs
nyx-backend/src/gathering/ps/: mod.rs  ps.data
nyx-backend/src/gathering/uptime/: mod.rs  uptime.data
nyx-builder/: Cargo.toml
nyx-builder/src/: gathering.rs  main.rs
nyx-tui/: Cargo.toml
nyx-tui/src/: error.rs  input.rs  lib.rs  main_screen.rs  util.rs
nyx-tui/src/body/: main.rs  mod.rs
nyx-tui/src/head/: draw.rs  mod.rs
src/: gui.rs  main.rs  utils.rs
src/comp/: cpu.rs  disc.rs  disk.rs  gpu.rs  mod.rs  network.rs  process.rs  ram.rs  temperature.rs
src/gui/: about.rs  cpu.rs  disk.rs  gpu.rs  gui.rs  help.rs  mini_viewer.rs  mod.rs  network.rs  process.rs  ram.rs  settings.rs  temperature.rs
src/utils/: settings.rs  utils.rs
