[workspace]
resolver = "3"
members = [
	"nyx-tui",
	"nyx-backend", 
	"nyx-builder",
]

[workspace.dependencies]
athena = { git = "https://github.com/Xqhare/athena" }
hermes = { git = "https://github.com/Xqhare/hermes" }
areia = { git = "https://github.com/Xqhare/areia" }
horae = { git = "https://github.com/Xqhare/horae" }
talos = { git = "https://github.com/Xqhare/talos" }

