[package]
name = "nyx-tui"
version = "0.4.0"
edition = "2024"
rust-version = "1.93.0"

[dependencies]
talos = { workspace = true }
athena = { workspace = true }
horae = { workspace = true }
nyx-backend = { path = "../nyx-backend" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = "symbols"
